RESOLVED FIXED88553
sometimes all slaved videos don't start playing
https://bugs.webkit.org/show_bug.cgi?id=88553
Summary sometimes all slaved videos don't start playing
Jer Noble
Reported 2012-06-07 10:50:51 PDT
sometimes all slaved videos don't start playing
Attachments
Patch (4.50 KB, patch)
2012-06-07 10:54 PDT, Jer Noble
darin: review+
Jer Noble
Comment 1 2012-06-07 10:54:18 PDT
Jer Noble
Comment 2 2012-06-07 11:18:49 PDT
Note You need to log in before you can comment on or make changes to this bug.