sometimes all slaved videos don't start playing https://bugs.webkit.org/show_bug.cgi?id=88553

Reviewed by Darin Adler.

Source/WebCore:

Test: media/media-controller-time-clamp.html

Some PlatformClock classes will occasionally return times < 0 and will
always return times slightly > duration() when playback has ended.  Clamp
the value of currentTime() to the specified [0..duration] range.

* html/MediaController.cpp:
(MediaController::currentTime):

LayoutTests:

* media/media-controller-time-clamp-expected.txt: Added.
* media/media-controller-time-clamp.html: Added.

Canonical link: https://commits.webkit.org/106378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119739 268f45cc-cd09-0410-ab3c-d52691b4dbfc